--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,15 +1,16 @@
-h1 {
-  color: white;
-  font-weight: bold;
+:root {
+  --brand-color: #dcd2f5;
+  --font-family: "EB Garamond", serif;
 }
 
-p {
-  font-weight: regular;
+h1 {
+  color: white;
+  font-weight: bolder;
 }
 
 body {
-  background-color: #dcd2f5;
-  font-family: "EB Garamond", serif;
+  background-color: var(--brand-color);
+  font-family: var(--font-family);
 }
 
 .hero {
@@ -19,4 +20,18 @@ body {
   border-radius: 12px;
   padding: 170px 50px;
   margin: 10px 10px;
+}
+
+.hero p {
+  font-weight: bold;
+  margin: 0;
+}
+
+.btn-branding {
+  background: var(--brand-color);
+  border-color: var(--brand-color);
+  border-radius: 7px;
+  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.12);
+  color: #fff;
+  padding: 13px 30px;
 }
