--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,39 +4,78 @@
 }
 
 h1 {
+  font-size: 70px;
+  line-height: 1;
   color: white;
   font-weight: bolder;
 }
 
+h2 {
+  font-size: 42px;
+}
 body {
   background-color: var(--brand-color);
   font-family: var(--font-family);
 }
 
-.hero {
+.homepage-hero {
   background: rgba(255, 255, 255, 0.5);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(25px);
   border-radius: 12px;
-  padding: 170px 50px;
+  padding: 150px 50px;
   margin: 10px 10px;
 }
 
-.hero p {
+.homepage-hero p {
   font-weight: bold;
+  font-size: 18px;
   margin: 0;
 }
 
 .btn-branding {
   background: var(--brand-color);
-  border-color: var(--brand-color);
+  border-color: #fff;
   border-radius: 7px;
-  box-shadow: 0px 4px 2px rgba(0, 0, 0, 0.12);
   color: #fff;
   padding: 13px 30px;
+  margin-top: 20px;
 }
 
 #header-nav a {
-  color: #fff;
+  color: rgb(95, 93, 93);
   font-size: 20px;
+}
+
+.navigation-links {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-work {
+  background-color: var(--brand-color);
+  border-color: #fff;
+  color: #fff;
+  border-radius: 7px;
+  padding: 13px 30px;
+  margin: 20px;
+}
+
+.btn-contact {
+  background-color: var(--brand-color);
+  border-color: #fff;
+  color: #fff;
+  border-radius: 7px;
+  padding: 13px 30px;
+  margin: 20px;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
 }
