--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,14 +15,14 @@ h2 {
   font-size: 42px;
 }
 body {
-  background-color: var(--brand-color);
   font-family: var(--font-family);
+  background: var(--brand-color);
 }
 
 .homepage-hero {
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--brand-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(25px);
+  backdrop-filter: blur(100px);
   border-radius: 12px;
   padding: 150px 50px;
   margin: 10px 10px;
@@ -44,7 +44,7 @@ body {
 }
 
 #header-nav a {
-  color: rgb(95, 93, 93);
+  color: rgba(95, 93, 93);
   font-size: 20px;
 }
 
@@ -78,22 +78,29 @@ body {
 }
 
 .about-section {
+  background: var(--brand-color);
+  max-width: 100%;
+  height: 260px;
+}
+
+.about-description {
   background: rgba(255, 255, 255, 0.5);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(25px);
-  max-width: 600px;
+  width: 600px;
+  height: 250px;
   border-radius: 12px;
-  display: flex;
-  justify-content: center;
-  margin: 50px auto;
-}
-
-#about-description {
-  padding: 20px 0 20px 40px;
+  margin: 0 auto 50px;
+  padding: 20px 0 20px 35px;
 }
 .profile-image {
-  max-width: 250px;
-  padding-top: 10px;
+  max-width: 240px;
+  position: absolute;
+  top: 5px;
+}
+
+.project-cards {
+  background: rgba(255, 255, 255, 0.5);
 }
 
 @media (max-width: 576px) {
