--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -102,6 +102,44 @@ body {
   background: rgba(255, 255, 255, 0.5);
 }
 
+.contact-page-body {
+  background: #fff;
+}
+
+.contact-title h1 {
+  color: darkgray;
+  margin-left: 65px;
+}
+
+.contact-info {
+  background: rgba(220, 210, 245, 0.5);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(25px);
+  width: 750px;
+  height: 200px;
+  border-radius: 7px;
+}
+
+.contact-info h2 {
+  font-weight: bold;
+}
+.contact-inquiry {
+  margin: 50px 0 50px 80px;
+}
+
+.contact-email {
+  margin: 50px 25px;
+}
+
+.btn-email {
+  background-color: var(--brand-color);
+  border-color: var(--secondary-color);
+  color: var(--secondary-color);
+  border-radius: 7px;
+  padding: 13px 30px;
+  margin: 20px;
+}
+
 @media (max-width: 576px) {
   h1 {
     font-size: 48px;
