--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -111,7 +111,9 @@ body {
   margin-left: 65px;
 }
 
-.contact-info {
+.contact-box {
+  display: block;
+  margin: 0 auto;
   background: rgba(220, 210, 245, 0.5);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(25px);
@@ -120,7 +122,7 @@ body {
   border-radius: 7px;
 }
 
-.contact-info h2 {
+.contact-box h2 {
   font-weight: bold;
 }
 .contact-inquiry {
