--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,6 +93,7 @@ body {
   background: var(--brand-color);
   max-width: 100%;
   height: 260px;
+  margin: 75px 0 100px 0;
 }
 
 .about-description {
@@ -100,19 +101,19 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(25px);
   width: 600px;
-  height: 250px;
+  height: 300px;
   border-radius: 12px;
   margin: 0 auto 50px;
   padding: 20px 0 20px 35px;
 }
 .profile-image {
   max-width: 240px;
-  position: absolute;
-  top: 5px;
+  margin-top: 10px;
+  display: flex;
 }
 
 .project-title h2 {
-  margin: auto 20px;
+  margin: auto 50px;
 }
 .project-cards {
   background: rgba(255, 255, 255, 0.5);
