--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,6 +106,11 @@ body {
   margin: 0 auto 50px;
   padding: 20px 0 20px 35px;
 }
+
+.about-description p {
+  font-size: 17px;
+  line-height: 1.5;
+}
 .profile-image {
   max-width: 240px;
   margin-top: 10px;
@@ -145,7 +150,6 @@ body {
 
 .contact-title h1 {
   color: darkgray;
-  margin-left: 130px;
 }
 
 .contact-box {
