made some changes to the css for the about & project page to make it responsive when on mobile

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -91,9 +91,10 @@ body {
 
 .about-section {
   background: var(--brand-color);
-  max-width: 100%;
+  display: flex;
+  justify-content: space-between;
   height: 260px;
-  margin: 75px 0 100px 0;
+  margin: 75px 0 100px 75px;
 }
 
 .about-description {
@@ -104,7 +105,7 @@ body {
   height: 300px;
   border-radius: 12px;
   margin: 0 auto 50px;
-  padding: 20px 0 20px 35px;
+  padding: 20px 0 20px 30px;
 }
 
 .about-description p {
@@ -112,7 +113,7 @@ body {
   line-height: 1.5;
 }
 .profile-image {
-  max-width: 240px;
+  width: 240px;
   margin-top: 10px;
   display: flex;
 }
@@ -203,5 +204,10 @@ body {
 
   .about-section {
     max-width: 550px;
+    max-height: 250px;
+  }
+
+  .about-description h2 {
+    font-size: 22px;
   }
 }
