made more stylized changes to the description box to make it more responsive on mobile

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -208,6 +208,15 @@ body {
   }
 
   .about-description h2 {
-    font-size: 22px;
+    font-size: 12px;
+  }
+
+  .about-description p {
+    font-size: 14px;
+    line-height: 1;
+  }
+
+  .profile-image {
+    width: 200px;
   }
 }
