made adjustments to the css so that the about description, profile image and project cards are responsive when on mobile devices

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -203,20 +203,29 @@ body {
   }
 
   .about-section {
-    max-width: 550px;
-    max-height: 250px;
+    margin: 50px auto 0;
+  }
+  .about-description {
+    display: auto;
+    max-width: 500px;
+    max-height: 200px;
   }
 
   .about-description h2 {
-    font-size: 12px;
+    font-size: 30px;
   }
 
   .about-description p {
-    font-size: 14px;
+    font-size: 20px;
     line-height: 1;
   }
 
   .profile-image {
-    width: 200px;
+    display: none;
+  }
+
+  .project-cards {
+    display: block;
+    margin: auto;
   }
 }
